packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
@import "../../../assets/scss/global";
@import "../../../assets/scss/form";

.left {
  float: left;
  width: $menubar-width;
  height: $commandbar-height;
  padding: $standard-padding;
  border-right: 1px solid $silver-75;
}
.right {
  display: flex;
  align-items: center;

  float: right;
  width: calc(100% - #{$menubar-width});
  height: $commandbar-height;

  .tag-filters {
    position: relative;
    display: block;
    height: 1px;
    border-top: 1px solid $silver-75;
    overflow: hidden;
  }

  &.extended {
    flex-direction: column;
    height: $commandbar-extended-height!important;
    border-bottom: none!important;

    .tag-filters {
      position: relative;
      padding: 15px $standard-padding;
      height: auto;

      .tag-filters-area {
        div {
          display: inline-block;
          position: relative;
          z-index: 0;
        }

        position: relative;
        display: inline-block;
        width: calc(100% - 64px);
        white-space: nowrap;
        overflow-x: auto;
      }
    }
  }

  .main-bar {
    width: 100%;
    display: flex;
    padding: 10px $standard-padding 9px $standard-padding;
    column-gap: 1em;
    justify-self: center;
    justify-content: flex-start;
    align-items: center;
  }

  .line-end {
    display: flex;
    justify-content: space-between;
  }
}

.search-bar {
  width: $search-bar-width;

  &::placeholder {
    color: $silver-dark;
    text-align: center;
  }
}

.save-segments {
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 10px;
  cursor: pointer;
}

.left-shadow {
  display: inline-block;
  position: absolute;
  left: 20px;
  top: 13px;
  height: 36px;
  width: 30px;
  z-index: 1;
  box-shadow: inset 23px 0 25px -25px rgba(0,0,0,0.2);
}
.right-shadow {
  display: inline-block;
  position: absolute;
  right: 160px;
  top: 13px;
  height: 36px;
  width: 30px;
  z-index: 1;
  box-shadow: inset -23px 0 25px -25px rgba(0,0,0,0.2);
}

.moon-Add {
  color: $text-color!important;
}

.toggled-filter {
  background: #f3f3f3 !important;
  border-radius: 8px;
  padding: 10px 7px !important;
  height: 40px !important;
  width: 40px !important;
  text-align: center;
  position: relative;
  left: 3px;
  margin: -10px;
  transition: background 0.3s ease!important;
  i { color: #252525!important; }
}

.moon-Search {
  left: 10px!important;
  top: 10px!important;
  font-size: 20px;
  color: $search-icon-color;
}

.notification {
  margin-right: 10px;
  cursor: pointer;
  position: relative;
  img {
    height: 20px;
    width: 20px;
    opacity: 0.45;
  }
}

.notification-dot {
  position: absolute;
  right: -4px;
  top: -4px;
  width: 4px;
  height: 4px;
  color: #90030C;
  border-radius: 50%;
}

.icon-not-menu {
  height: 20px;
  width: 20px;
  opacity: 0.45;
}

.invert {
  filter: invert(1);
}

